--- a/client/src/pages/DictionaryPage/Dictionary.css
+++ b/client/src/pages/DictionaryPage/Dictionary.css
@@ -1,4 +1,5 @@
 .dictionary {
+  /* height: 100vh; */
   background: linear-gradient(180deg, #f08a5d 11.57%, #b83b5e 88.96%);
 }
 .dictionary__progress {
@@ -6,4 +7,30 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+.dictionary__progress-number {
+  font-size: 36px;
+  line-height: 1.4;
+}
+.card__item {
+  max-width: 450px;
+  max-height: 430px;
+  border-radius: 10px;
+  text-align: center;
+}
+.card__amount {
+  margin-top: 60px;
+  font-size: 24px;
+}
+.card__btn {
+  margin-top: 100px;
+}
+.card .card-title {
+  margin-top: 30px;
+  font-size: 32px;
+}
+.card__btn .btn {
+  border-radius: 15px;
+  height: 67px;
+  width: 320px;
 }
