--- a/client/src/pages/MainPage/Main.scss
+++ b/client/src/pages/MainPage/Main.scss
@@ -10,6 +10,54 @@
     background-color: rgba(226, 150, 91, 0.6);
 }
 
+.group_1 {
+    background-color: rgba(21, 255, 0, 0.45);
+}
+
+.group_1:hover {
+    background-color: rgba(21, 255, 0, 0.5);
+}
+
+.group_2 {
+    background-color: rgba(157, 255, 0, 0.45);
+}
+
+.group_2:hover {
+    background-color: rgba(157, 255, 0, 0.5);
+}
+
+.group_3 {
+    background-color: rgba(255, 255, 0, 0.45);
+}
+
+.group_3:hover {
+    background-color: rgba(255, 255, 0, 0.5);
+}
+
+.group_4 {
+    background-color: rgba(255, 142, 0, 0.45);
+}
+
+.group_4:hover {
+    background-color: rgba(255, 142, 0, 0.5);
+}
+
+.group_5 {
+    background-color: rgba(255, 71, 0, 0.45);
+}
+
+.group_5:hover {
+    background-color: rgba(255, 71, 0, 0.5);
+}
+
+.group_6 {
+    background-color: rgba(255, 0, 0, 0.45);
+}
+
+.group_6:hover {
+    background-color: rgba(255, 0, 0, 0.5);
+}
+
 .paginator {
     padding-left: 1%;
     padding-right: 1%;
