--- a/client/src/pages/DictionaryPage/Dictionary.css
+++ b/client/src/pages/DictionaryPage/Dictionary.css
@@ -1,5 +1,5 @@
 .dictionary {
-  /* height: 100vh; */
+  height: 85vh;
   background: linear-gradient(180deg, #f08a5d 11.57%, #b83b5e 88.96%);
 }
 .dictionary__progress {
@@ -11,6 +11,17 @@
 .dictionary__progress-number {
   font-size: 36px;
   line-height: 1.4;
+}
+.dictionary__cards {
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.dictionary__cards .col {
+  float: none;
 }
 .card__item {
   max-width: 450px;
