feat: add keyboards event

--- a/client/src/pages/GamesPage/Sprint/components/Sprint/sprintGame.scss
+++ b/client/src/pages/GamesPage/Sprint/components/Sprint/sprintGame.scss
@@ -18,3 +18,16 @@
   justify-content: space-around;
   align-items: center;
 }
+.buttons-image-handler, .buttons-handler {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.button-image {
+  width: 10%;
+}
+
+.reverse {
+  transform: rotate(180deg);
+}
