--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,13 @@
 .App-link {
   color: #61dafb;
 }
-
+.loader {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
