--- a/client/src/pages/Header/header.scss
+++ b/client/src/pages/Header/header.scss
@@ -1,4 +1,5 @@
 .header_container {
+    background-color: rgba(0, 0, 0, 0.05);
     display: flex;
     justify-content: space-between;
     align-items: center;
