--- a/client/src/pages/DictionaryPage/Dictionary.css
+++ b/client/src/pages/DictionaryPage/Dictionary.css
@@ -1,22 +1,26 @@
 .dictionary {
-  /* height: 85vh; */
   background: linear-gradient(180deg, #f08a5d 11.57%, #b83b5e 88.96%);
+}
+.dictionary .row {
+  margin-bottom: 0;
 }
 .dictionary__progress {
   min-height: 22vh;
-  padding: 0.1rem 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
+.dictionary__progress .row {
+  margin-bottom: 0;
+}
 .dictionary__progress-number {
   font-size: 24px;
   line-height: 1.4;
 }
 .dictionary__cards {
-  min-height: 56vh;
+  min-height: 58vh;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -29,6 +33,7 @@
 
 .dictionary__cards .row {
   height: 100%;
+  margin-bottom: 0;
 }
 .card__item {
   width: 280px;
@@ -36,21 +41,18 @@
   text-align: center;
 }
 .card__amount {
-  margin-top: 60px;
   font-size: 24px;
-}
-.card__btn {
-  margin-top: 100px;
+  margin-bottom: 5rem;
 }
 .card .card-title {
-  margin-top: 30px;
+  margin-bottom: 16px;
   font-size: 32px;
   height: 64px;
 }
 .card__btn .btn,
 .word_card__btn {
   border-radius: 15px;
-  height: 67px;
+  height: 48px;
   width: 100%;
   max-width: 320px;
   display: flex;
