--- a/client/src/pages/DictionaryPage/Dictionary.css
+++ b/client/src/pages/DictionaryPage/Dictionary.css
@@ -1,5 +1,6 @@
 .dictionary {
   background: linear-gradient(180deg, #f08a5d 11.57%, #b83b5e 88.96%);
+  padding-bottom: 1rem;
 }
 .dictionary .row {
   margin-bottom: 0;
@@ -11,9 +12,6 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-}
-.dictionary__progress .row {
-  margin-bottom: 0;
 }
 .dictionary__progress-number {
   font-size: 24px;
@@ -33,7 +31,6 @@
 
 .dictionary__cards .row {
   height: 100%;
-  margin-bottom: 0;
 }
 .card__item {
   width: 280px;
@@ -64,8 +61,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 54vh;
 }
-
+.word_card.word_card__dictionary {
+  border-color: transparent;
+}
 .word_container__title {
   font-size: 32px;
   font-weight: 300;
