--- a/client/src/pages/GamesPage/Savannah/Savannah.scss
+++ b/client/src/pages/GamesPage/Savannah/Savannah.scss
@@ -4,8 +4,9 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
-    background: linear-gradient(180deg, #F08A5D 0%, #B83B5E 100%)
+    height: 84.3vh;
+    background: linear-gradient(180deg, #F08A5D 0%, #B83B5E 100%);
+    user-select: none;
 }
 
 .selection-container {
@@ -19,11 +20,15 @@
     display: flex;
     font-size: 2rem;
     color: #fff;
+    justify-content: center;
+    align-items: center;
 }
 
 .savannah-card {
     font-size: 2rem;
     color: #fff;
+    cursor: pointer;
+    text-transform: lowercase;
     /* border: 2px solid #000;
     border-radius: 1vh; */
 }
@@ -39,11 +44,11 @@
   
       @keyframes active-card-fall {
         0% {
-          top: 20vh;
+          top: 50vh;
         }
     
         100% {
-          top: 80vh;
+          top: 70vh;
         }
       }
 }
@@ -56,4 +61,10 @@
 .lost-screen {
     font-size: 5rem;
     color: #fff;
+}
+
+@media (max-width: 600px) {
+  .savannah-card {
+    font-size: 1.5rem;
+}
 }
