--- a/client/src/pages/GamesPage/games.scss
+++ b/client/src/pages/GamesPage/games.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  height: 85vh;
+  height: 84.3vh;
 }
 
 .game-card {
@@ -30,4 +30,10 @@
 
 .game-icon {
   width: 95px;
+}
+
+@media (max-width: 539.5px) {
+  .games-block {
+    height: auto;
+  }
 }
