--- a/client/src/pages/MainPage/Main.scss
+++ b/client/src/pages/MainPage/Main.scss
@@ -99,3 +99,24 @@
 .arrow:hover {
     background-color: rgba(226, 150, 91, 0.6);
 }
+
+@media (max-width: 860px) and (min-width: 530px) {
+    .group {
+        font-size: 18px;
+        padding: 0;
+    }
+}
+
+@media (max-width: 529px) and (min-width: 410px) {
+    .group {
+        font-size: 12px;
+        padding: 0;
+    }
+}
+
+@media (max-width: 409px){
+    .group {
+        font-size: 10px;
+        padding: 0;
+    }
+}
