fix: styles fixes

--- a/client/src/pages/Header/header.scss
+++ b/client/src/pages/Header/header.scss
@@ -63,6 +63,10 @@
         width: 35px;
         height: 35px;
     }
+    .game_links_container {
+        width: 40%;
+    }
+    
 }
 
 @media (max-width: 464px) {
