--- a/client/src/pages/GamesPage/MyGame/myGame.scss
+++ b/client/src/pages/GamesPage/MyGame/myGame.scss
@@ -39,8 +39,16 @@
     width: 250px;
     height: 180px;
     cursor: pointer;
+    transition: box-shadow .25s;
   }
 }
+.my-game-word-image {
+  img:hover {
+    box-shadow: 0 14px 28px rgba(255, 255, 255, 0.25), 0 10px 10px rgba(255, 255, 255, 0.22);
+transition: .2s;
+  }
+}
+
 
 .guess-word {
   font-size: 24px;
