--- a/client/src/pages/GamesPage/Sprint/sprint.scss
+++ b/client/src/pages/GamesPage/Sprint/sprint.scss
@@ -4,6 +4,7 @@
   justify-content: space-around;
   align-items: center;
   height: 84.3vh;
+  user-select: none;
 }
 .game-handler {
   display: flex;
