--- a/client/src/pages/GamesPage/Savannah/Savannah.scss
+++ b/client/src/pages/GamesPage/Savannah/Savannah.scss
@@ -1,68 +1,125 @@
 .savannah-container {
     display: flex;
-    justify-content: space-around;
+    // justify-content: space-around;
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 84.3vh;
+    min-height: 84.3vh;
     background: linear-gradient(180deg, #F08A5D 0%, #B83B5E 100%);
     user-select: none;
-}
+    position: relative;
 
-.selection-container {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 30vh;
-    width: 70vw;
-}
-
-.lives-container {
-    display: flex;
-    font-size: 2rem;
-    color: #fff;
-    justify-content: center;
-    align-items: center;
-}
-
-.savannah-card {
-    font-size: 2rem;
-    color: #fff;
-    cursor: pointer;
-    text-transform: lowercase;
-    /* border: 2px solid #000;
-    border-radius: 1vh; */
-}
-
-.savannah-card_active {
-    font-size: 2rem;
-    color: #fff;
-    position: absolute;
-      font-size: 2em;
-      font-weight: bold;
-      text-transform: capitalize;
-      animation: active-card-fall 5s ease infinite;
+    .selection-container {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 50vh;
+      width: 90vw;
+  }
   
-      @keyframes active-card-fall {
-        0% {
-          top: 50vh;
-        }
+  .lives-container {
+      display: flex;
+      font-size: 2rem;
+      color: #fff;
+      justify-content: center;
+      align-items: center;
+      margin-top: 5vh;
+      margin-left: 80%;
+  }
+  
+  .savannah-card {
+      font-size: 2rem;
+      color: #fff;
+      cursor: pointer;
+      text-transform: lowercase;
+      /* border: 2px solid #000;
+      border-radius: 1vh; */
+  }
+  
+  .savannah-card_active {
+      font-size: 2rem;
+      color: #fff;
+      position: absolute;
+      // top: 20%;
+      // left: 30%;
+        font-size: 2em;
+        font-weight: bold;
+        text-transform: capitalize;
+        transform: translate(0);
+        
+        // animation: active-card-fall 5s ease infinite;
     
-        100% {
-          top: 70vh;
-        }
-      }
+        // @keyframes active-card-fall {
+        //   0% {
+        //     top: 50vh;
+        //   }
+      
+        //   100% {
+        //     top: 70vh;
+        //   }
+        // }
+  }
+  
+  .activeCardFall {
+    transform: translateY(60vh);
+    transition: transform 5s linear;
+  }
+
+  .activeCardSpacing {
+    transition: letter-spacing 0.4s ease;
+    letter-spacing: 1000px;
+    // transform: translateY(80vh);
+    // transition: transform 0.1s ease;
+  }
+  
+  .win-screen {
+      font-size: 5rem;
+      color: #fff;
+  }
+  
+  .lost-screen {
+      font-size: 5rem;
+      color: #fff;
+  }
+
+  .savannah_crystal {
+    height: 10vh;
+    animation: crystal-animation 2s linear infinite;
+  }
+
+  @keyframes crystal-animation {
+    0% {
+      transform: translate(0);
+  }
+  23% {
+      transform: translateY(-6px);
+  }
+  25% {
+      transform: translateY(-7px);
+  }
+  28% {
+      transform: translateY(-6px);
+  }
+  50% {
+      transform: translate(0);
+  }
+  72% {
+      transform: translateY(6px);
+  }
+  75% {
+      transform: translateY(7px);
+  }
+  78% {
+      transform: translateY(6px);
+  }
+  100% {
+      transform: translate(0);
+    
+  }
+  
 }
 
-.win-screen {
-    font-size: 5rem;
-    color: #fff;
-}
 
-.lost-screen {
-    font-size: 5rem;
-    color: #fff;
 }
-
 @media (max-width: 600px) {
   .savannah-card {
     font-size: 1.5rem;
