feat: add font-size for adaptive

--- a/client/src/pages/DictionaryPage/Dictionary.scss
+++ b/client/src/pages/DictionaryPage/Dictionary.scss
@@ -1,81 +1,2 @@
-.dictionary {
-  background: linear-gradient(180deg, #f08a5d 11.57%, #b83b5e 88.96%);
-  padding-bottom: 1rem;
-  min-height: 89vh;
-}
-.dictionary .row {
-  margin-bottom: 0;
-}
-.dictionary__progress {
-  min-height: 22vh;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-}
-.dictionary__progress-number {
-  font-size: 24px;
-  line-height: 1.4;
-}
-.dictionary__cards {
-  min-height: 58vh;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-evenly;
-}
-.dictionary__cards{
-  .col {
-    float: none;
-  }
-  .row {
-    height: 100%;
-  }
-}
-
-.card__item {
-  width: 280px;
-  border-radius: 10px;
-  text-align: center;
-}
-.card__amount {
-  font-size: 24px;
-  margin-bottom: 5rem;
-}
-.card .card-title {
-  margin-bottom: 16px;
-  font-size: 32px;
-  height: 64px;
-}
-.card__btn .btn,
-.word_card__btn {
-  border-radius: 15px;
-  height: 48px;
-  width: 100%;
-  max-width: 320px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 0;
-}
-
-.word_container__lists {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 54vh;
-}
-.word_card.word_card__dictionary {
-  border-color: transparent;
-}
-.word_card-hard {
-  position: absolute;
-  top: 0.5rem;
-  right: 0.5rem;
-}
-.word_container__title {
-  font-size: 32px;
-  font-weight: 300;
-}
+@import './sass/style';
+@import './sass/media';
