--- a/client/src/pages/Header/components/UserInfo/userInfo.scss
+++ b/client/src/pages/Header/components/UserInfo/userInfo.scss
@@ -2,7 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.1) !important;
+  padding: 2% 5%;
+  margin: 0 3%;
 }
 .user-name {
   color:rgb(199, 193, 193);
