--- a/client/src/pages/MainPage/popup.scss
+++ b/client/src/pages/MainPage/popup.scss
@@ -69,7 +69,7 @@
     height: 13%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     margin-bottom: 2%;
     cursor: pointer;
 }
@@ -81,4 +81,14 @@
 .popup_card_bg {
     width: 80%;
     border-radius: 10%;
+}
+
+.audio_btn {
+    height: 100%;
+}
+
+@media (max-width: 700px) and (min-width: 480px) {
+    .popup_content {
+        width: 90%;
+    }
 }
