--- a/client/src/pages/StatisticPage/statistic.scss
+++ b/client/src/pages/StatisticPage/statistic.scss
@@ -1,11 +1,20 @@
 .stat_page_container {
     font-size: 18px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.statistic_span_info {
+    padding-top: 10px;
 }
 
 .stat_container {
     display: flex;
     justify-content: space-around;
     margin: 4% 0;
+    width: 100%;
 }
 
 .game_stat_img {
@@ -24,6 +33,6 @@ p {
 }
 
 .capt {
-    margin: 2% 0;
+    margin: 4% 0;
     font-size: 32px;
 }
