--- a/client/src/pages/Header/header.scss
+++ b/client/src/pages/Header/header.scss
@@ -5,7 +5,7 @@
     align-items: center;
     padding-left: 4%;
     padding-right: 4%;
-    height: 56px;
+    height: 7.8vh;
     user-select: none; 
 }
 
