styles: add some styles to sprint game

--- a/client/src/pages/GamesPage/Sprint/components/SprintRules/sprintRules.scss
+++ b/client/src/pages/GamesPage/Sprint/components/SprintRules/sprintRules.scss
@@ -8,5 +8,10 @@
 .rules-text {
   width: 75%;
   text-align: center;
-  color: white;
+  color: #e0e0e0;
+  font-size: 25px;
+}
+.start-sprint {
+  width: 25%;
+  border-radius: 12px;
 }
