--- a/client/src/pages/GamesPage/Sprint/components/Score/score.scss
+++ b/client/src/pages/GamesPage/Sprint/components/Score/score.scss
@@ -1,3 +1,19 @@
 .score-block {
-  margin-top: 30px;
+  margin-top: 50px;
+  font-size: 30px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(72, 46, 46, 0.2);
+  border-radius: 20px;
+  color: #f5d3d3;
+}
+
+.right-score {
+  color: rgb(37, 209, 37);
+}
+
+.incorrect-score {
+  color: rgb(230, 62, 62);
 }
