fix: height block

--- a/client/src/pages/MainPage/Main.scss
+++ b/client/src/pages/MainPage/Main.scss
@@ -94,6 +94,7 @@
     padding: 0;
     background-color: rgba(226, 150, 91, 0.45);
     border-radius: 50%;
+    font-size: 28px !important;
 }
 
 .arrow:hover {
