--- a/client/src/pages/GamesPage/Savannah/Savannah.scss
+++ b/client/src/pages/GamesPage/Savannah/Savannah.scss
@@ -1,127 +1,204 @@
 .savannah-container {
-    display: flex;
+    // display: flex;
     // justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
+    // align-items: center;
+    // flex-direction: column;
     width: 100%;
     min-height: 84.3vh;
-    background: linear-gradient(180deg, #F08A5D 0%, #B83B5E 100%);
-    user-select: none;
-    position: relative;
+    // user-select: none;
+    // position: relative;
+    transform-style: preserve-3d;
+    // perspective: 380px;
+    // max-width: 600px;
+
+    .savannah-field {
+        // background-color: green;
+        background-image: url(https://www.nps.gov/miss/learn/nature/images/20170727-4934.jpg?maxwidth=650&autorotate=false);
+        // transform: rotateX(60deg);
+        width: 100%;
+        height: 86vh;
+        // z-index: 1;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        position: relative;
+        display: inline-block;
+        perspective: none;
+        // margin-top: -30vh;
+        background-size: cover;
+    }
 
     .selection-container {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 50vh;
-      width: 90vw;
-  }
-  
-  .lives-container {
-      display: flex;
-      font-size: 2rem;
-      color: #fff;
-      justify-content: center;
-      align-items: center;
-      margin-top: 5vh;
-      margin-left: 80%;
-  }
-  
-  .savannah-card {
-      font-size: 2rem;
-      color: #fff;
-      cursor: pointer;
-      text-transform: lowercase;
-      /* border: 2px solid #000;
+        display: flex;
+        justify-content: space-around;
+        margin-top: 50vh;
+        width: 90vw;
+    }
+
+    .lives-container {
+        display: flex;
+        font-size: 2rem;
+        color: #fff;
+        justify-content: center;
+        align-items: center;
+        margin-top: 5vh;
+        margin-left: 80%;
+    }
+    .gallery {
+        text-align: center; /* Выравниваем по центру */
+        perspective: 800px; /* Перспектива */
+        display: flex;
+        margin-top: 10vh;
+    //    width:  100px;
+    //    height: 100px;
+       }
+    //    .center {
+    //     background: url(https://www.nps.gov/miss/learn/nature/images/20170727-4934.jpg?maxwidth=650&autorotate=false);
+    //     width:  60vw;
+    //     height: 15vh;
+    //    }
+    //    .left {
+    //     background-color: green;
+    //     width:  20vw;
+    //     height: 15vh;
+    //     transform: rotateY(30deg); /* Поворачиваем относительно оси Y */
+    //     transform-origin: right center; /* Точка поворота справа */
+    //    }
+    //    .right {
+    //     width:  20vw;
+    //     height: 15vh;
+    //     background-color: green;
+    //     transform: rotateY(            -92deg            );
+    //     transform-origin: left center; /* Точка поворота слева */
+    //    }
+
+    .savannah-card {
+        font-size: 2rem;
+        color: #fff;
+        cursor: pointer;
+        text-transform: lowercase;
+        /* border: 2px solid #000;
       border-radius: 1vh; */
-  }
-  
-  .savannah-card_active {
-      font-size: 2rem;
-      color: #fff;
-      position: absolute;
-      // top: 20%;
-      // left: 30%;
-        font-size: 2em;
+    }
+
+    .savannah-card_active {
+        font-size: 2rem;
+        color: #fff;
+        // transform: rotateX(-45deg);
+        // position: absolute;
+        //   top: 20%;
+        //   left: 30%;
+        font-size: 4em;
         font-weight: bold;
         text-transform: capitalize;
-        transform: translate(0);
-        
+        margin-top: 30vh;
+        // transform: translate(0);
+        transform: scale3d(0,0,0);
         // animation: active-card-fall 5s ease infinite;
-    
+
         // @keyframes active-card-fall {
         //   0% {
         //     top: 50vh;
         //   }
-      
+
         //   100% {
         //     top: 70vh;
         //   }
         // }
-  }
-  
-  .activeCardFall {
-    transform: translateY(60vh);
-    transition: transform 5s linear;
-  }
+    }
 
-  .activeCardSpacing {
-    transition: letter-spacing 0.4s ease;
-    letter-spacing: 1000px;
-    // transform: translateY(80vh);
-    // transition: transform 0.1s ease;
-  }
-  
-  .win-screen {
-      font-size: 5rem;
-      color: #fff;
-  }
-  
-  .lost-screen {
-      font-size: 5rem;
-      color: #fff;
-  }
+    .activeCardFall {
+        // transform: translateY(60vh);
+        transform: scale3d(2, 2, 2);
+        transition: transform 5s linear;
+    }
 
-  .savannah_crystal {
+    .activeCardSpacing {
+        transition: letter-spacing 0.4s ease;
+        letter-spacing: 1000px;
+        // transform: translateY(80vh);
+        // transition: transform 0.1s ease;
+    }
+
+    .win-screen {
+        font-size: 5rem;
+        color: #fff;
+    }
+
+    .lost-screen {
+        font-size: 5rem;
+        color: #fff;
+    }
+    
+
+    
+
+    @keyframes crystal-animation {
+        0% {
+            transform: translate(0);
+        }
+
+        23% {
+            transform: translateY(-6px);
+        }
+
+        25% {
+            transform: translateY(-7px);
+        }
+
+        28% {
+            transform: translateY(-6px);
+        }
+
+        50% {
+            transform: translate(0);
+        }
+
+        72% {
+            transform: translateY(6px);
+        }
+
+        75% {
+            transform: translateY(7px);
+        }
+
+        78% {
+            transform: translateY(6px);
+        }
+
+        100% {
+            transform: translate(0);
+
+        }
+
+    }
+
+
+}
+
+.gun-container {
+    position: relative;
+    width: 100%;
+}
+.savannah_crystal {
+    position: absolute;
     height: 10vh;
     animation: crystal-animation 2s linear infinite;
-  }
-
-  @keyframes crystal-animation {
-    0% {
-      transform: translate(0);
-  }
-  23% {
-      transform: translateY(-6px);
-  }
-  25% {
-      transform: translateY(-7px);
-  }
-  28% {
-      transform: translateY(-6px);
-  }
-  50% {
-      transform: translate(0);
-  }
-  72% {
-      transform: translateY(6px);
-  }
-  75% {
-      transform: translateY(7px);
-  }
-  78% {
-      transform: translateY(6px);
-  }
-  100% {
-      transform: translate(0);
-    
-  }
-  
+    margin-left: 38vw;
+    margin-top: -20vh;
+}
+.savannah_grass {
+    position: absolute;
+    width: 100vw;
+    // fill: green;
+    margin-top: -85vh;
+    z-index: 200;
 }
 
-
-}
 @media (max-width: 600px) {
-  .savannah-card {
-    font-size: 1.5rem;
-}
+    .savannah-card {
+        font-size: 1.5rem;
+    }
 }
