--- a/client/src/pages/GamesPage/AudioCall/audiocall.scss
+++ b/client/src/pages/GamesPage/AudioCall/audiocall.scss
@@ -19,6 +19,7 @@
     margin-top: 3vh;
     margin-bottom: 3vh;
     width: 70vw;
+    flex-wrap: wrap;
 }
 
 .play {
@@ -33,6 +34,13 @@
 .correct_word_image {
     width: 40vh;
     border-radius: 20%;
+}
+
+.additional__info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 
 @media (max-width: 600px) {
