--- a/client/src/pages/GamesPage/Savannah/Savannah.scss
+++ b/client/src/pages/GamesPage/Savannah/Savannah.scss
@@ -86,9 +86,9 @@
         position: absolute;
         // transform: rotateX(-45deg);
         // position: absolute;
-          top: 20%;
+          top: 10%;
           left: 30%;
-        font-size: 8em;
+        font-size: 12rem;
         font-weight: bold;
         text-transform: capitalize;
         // margin-top: 30vh;
@@ -111,8 +111,8 @@
         // transform: translateY(60vh);
         transform: scale3d(0.5, 0.5, 0.5);
         transition: transform 5s linear;
-        max-height: 300px;
-        max-width: 300px;
+        // max-height: 300px;
+        // max-width: 300px;
     }
 
     .activeCardSpacing {
@@ -183,6 +183,7 @@
     // margin-top: 45vh;
     margin-left: 5vw;
     width: 90vw;
+    z-index: 1000;
 }
 
 .gun-container {
@@ -198,7 +199,7 @@
     // margin-left: 38vw;
     // margin-top: -10vh;
     bottom: 10vh;
-    left: 30%;
+    left: 60%;
 }
 .savannah_grass {
     position: absolute;
