--- a/client/src/pages/MainPage/popup.scss
+++ b/client/src/pages/MainPage/popup.scss
@@ -75,7 +75,12 @@
 }
 
 .audio_image {
-    height: 100%;
+    height: 80%;
+    transition: all 0.8s;
+}
+
+.audio_image:hover {
+    transform: scale(1.1);
 }
 
 .popup_card_bg {
