--- a/client/src/pages/PromoPage/promo.scss
+++ b/client/src/pages/PromoPage/promo.scss
@@ -42,6 +42,8 @@
 
 .sign_in_btn {
     margin-right: 4%;
+    width: 28.9%;
+    border-radius: 5px;
 }
 
 .btn_container {
@@ -81,4 +83,85 @@
     .info_promo {
         width: 90%;
     }
+}
+
+.info_block_promo {
+    height: 400px;
+    width: 60%;
+    background-color: rgba(0, 0, 0, 0);
+    box-sizing: border-box;
+    display: flex;
+    margin-top: 4%;
+}
+
+.advantages {
+    width: 50%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    margin: 0 !important;
+    box-sizing: border-box;
+}
+
+.disadvantages {
+    width: 50%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    margin: 0 !important;
+    box-sizing: border-box;
+}
+
+.advantages_title {
+    width: 100%;
+    height: 15%;
+    background-color: rgba(0, 0, 0, 0);
+    margin: 0 !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.advantages_entity {
+    width: 100%;
+    height: 85%;
+    background-color: rgba(0, 0, 0, 0);
+    margin: 0 !important;
+    padding: 2% 6%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.disadvantages_title {
+    width: 100%;
+    height: 15%;
+    background-color: rgba(0, 0, 0, 0);
+    margin: 0 !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.disadvantages_entity {
+    width: 100%;
+    height: 85%;
+    background-color: rgba(0, 0, 0, 0);
+    margin: 0 !important;
+    padding: 2% 6%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.title_text {
+    font-size: 30px;
+}
+
+.granted_point {
+    font-size: 22px;
+}
+
+.nongranted_point {
+    font-size: 22px;
+    text-decoration: line-through;
+    opacity: 0.4;
 }
