--- a/client/src/pages/GamesPage/Savannah/Savannah.scss
+++ b/client/src/pages/GamesPage/Savannah/Savannah.scss
@@ -5,32 +5,19 @@
     flex-direction: column;
     width: 100%;
     min-height: 84.3vh;
-    // user-select: none;
-    // position: relative;
     transform-style: preserve-3d;
-    // perspective: 380px;
-    // max-width: 600px;
 
     .savannah-field {
-        // background-color: green;
-        background-image: url(https://www.nps.gov/miss/learn/nature/images/20170727-4934.jpg?maxwidth=650&autorotate=false);
-        // transform: rotateX(60deg);
+        background-image: url('https://image.freepik.com/free-photo/african-savanna-landscape-namibia-south-africa_146539-301.jpg');
         width: 100%;
-        height: 84.3vh;
-        // z-index: 1;
+        height: 74.3vh;
         display: flex;
         justify-content: space-between;
         flex-direction: column;
         align-items: center;
         text-align: center;
-        // position: relative;
-        // display: inline-block;
-        // perspective: none;
-        // margin-top: -30vh;
         background-size: cover;
     }
-
-   
 
     .lives-container {
         display: flex;
@@ -41,41 +28,12 @@
         margin-top: 5vh;
         margin-left: 80%;
     }
-    .gallery {
-        text-align: center; /* Выравниваем по центру */
-        perspective: 800px; /* Перспектива */
-        display: flex;
-        margin-top: 10vh;
-    //    width:  100px;
-    //    height: 100px;
-       }
-    //    .center {
-    //     background: url(https://www.nps.gov/miss/learn/nature/images/20170727-4934.jpg?maxwidth=650&autorotate=false);
-    //     width:  60vw;
-    //     height: 15vh;
-    //    }
-    //    .left {
-    //     background-color: green;
-    //     width:  20vw;
-    //     height: 15vh;
-    //     transform: rotateY(30deg); /* Поворачиваем относительно оси Y */
-    //     transform-origin: right center; /* Точка поворота справа */
-    //    }
-    //    .right {
-    //     width:  20vw;
-    //     height: 15vh;
-    //     background-color: green;
-    //     transform: rotateY(            -92deg            );
-    //     transform-origin: left center; /* Точка поворота слева */
-    //    }
 
     .savannah-card {
         font-size: 2rem;
         color: #fff;
         cursor: pointer;
         text-transform: lowercase;
-        /* border: 2px solid #000;
-      border-radius: 1vh; */
     }
 
     .savannah-card_active {
@@ -84,42 +42,22 @@
         display: flex;
         flex-direction: column;
         position: absolute;
-        // transform: rotateX(-45deg);
-        // position: absolute;
-          top: 10%;
-          left: 30%;
+        top: 2%;
+        left: 30%;
         font-size: 12rem;
         font-weight: bold;
         text-transform: capitalize;
-        // margin-top: 30vh;
-        // transform: translate(0);
-        transform: scale3d(0,0,0);
-        // animation: active-card-fall 5s ease infinite;
-
-        // @keyframes active-card-fall {
-        //   0% {
-        //     top: 50vh;
-        //   }
-
-        //   100% {
-        //     top: 70vh;
-        //   }
-        // }
+        transform: scale3d(0, 0, 0);
     }
 
     .activeCardFall {
-        // transform: translateY(60vh);
         transform: scale3d(0.5, 0.5, 0.5);
         transition: transform 5s linear;
-        // max-height: 300px;
-        // max-width: 300px;
     }
 
     .activeCardSpacing {
         transition: letter-spacing 0.4s ease;
         letter-spacing: 1000px;
-        // transform: translateY(80vh);
-        // transition: transform 0.1s ease;
     }
 
     .win-screen {
@@ -131,9 +69,6 @@
         font-size: 5rem;
         color: #fff;
     }
-    
-
-    
 
     @keyframes crystal-animation {
         0% {
@@ -170,43 +105,46 @@
 
         100% {
             transform: translate(0);
-
         }
-
     }
 
-
 }
+
 .selection-container {
     display: flex;
     justify-content: space-around;
-    // margin-top: 45vh;
-    margin-left: 5vw;
+    margin: 3vh 5vw;
     width: 90vw;
     z-index: 1000;
 }
 
 .gun-container {
     position: relative;
-    // height: 20vh;
     width: 100%;
 }
+
 .savannah_crystal {
     position: absolute;
     width: 25vw;
     height: 25vh;
     animation: crystal-animation 2s linear infinite;
-    // margin-left: 38vw;
-    // margin-top: -10vh;
     bottom: 10vh;
     left: 60%;
 }
+
+.savannah_gun_shot {
+    position: absolute;
+    width: 25vw;
+    height: 25vh;
+    animation: crystal-animation 2s linear infinite;
+    bottom: 20vh;
+    left: 53%;
+}
+
 .savannah_grass {
     position: absolute;
-    width: 100vw;
+    width: 98vw;
     height: 50vh;
-    // fill: green;
-    // margin-top:50vh;
     bottom: 0;
     left: 0;
     z-index: 200;
@@ -217,51 +155,3 @@
         font-size: 1.5rem;
     }
 }
-
-
-// @media only screen and (max-width: 1921px) {
-//     .savannah-card_active {
-//       top: 30%;
-//           left: 30%;
-//         transform: scale3d(0,0,0);
-//     }
-//     .gun-container {
-//         // position: relative;
-//         // width: 100%;
-//     }
-//     .savannah_crystal {
-//         position: absolute;
-//         width: 20vw;
-//         animation: crystal-animation 2s linear infinite;
-//         // margin-left: 38vw;
-//         // margin-top: -0vh;
-//     }
-//     .savannah_grass {
-//         position: absolute;
-//         width: 100vw;
-//         // fill: green;
-//         margin-top: 43vh;
-//         top: 0;
-//         left: 0;
-//         z-index: 200;
-//     }
-    
-// }
-
-// @media only screen and (max-width: 1281px) {
-//     .savannah-card_active {
-//       top: 30%;
-//           left: 30%;
-//     }
-//     .gun-container {
-//         // position: relative;
-//         // width: 100%;
-//     }
-//     .savannah_crystal {  
-//         margin-top: 16vh;
-//     }
-//     .savannah_grass {
-//         margin-top: 56vh;
-//     }
-    
-// }
