--- a/client/src/pages/GamesPage/AudioCall/audiocall.scss
+++ b/client/src/pages/GamesPage/AudioCall/audiocall.scss
@@ -22,6 +22,13 @@
     flex-wrap: wrap;
 }
 
+.text_container {
+    width: 80vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 .play {
     border-radius: 100%;
     text-align: center;
