--- a/client/src/pages/GamesPage/Savannah/Savannah.scss
+++ b/client/src/pages/GamesPage/Savannah/Savannah.scss
@@ -8,14 +8,16 @@
     transform-style: preserve-3d;
 
     .savannah-field {
-        background-image: url('https://image.freepik.com/free-photo/african-savanna-landscape-namibia-south-africa_146539-301.jpg');
-        width: 100%;
+        background-image: url('../../../assets/images/savanna_bg.jpg');
+         width: 100%;
+        // max-width: 768px;
         height: 74.3vh;
         display: flex;
         justify-content: space-between;
         flex-direction: column;
         align-items: center;
         text-align: center;
+        background-repeat: no-repeat;
         background-size: cover;
     }
 
@@ -42,7 +44,7 @@
         display: flex;
         flex-direction: column;
         position: absolute;
-        top: 2%;
+        top: 5%;
         left: 30%;
         font-size: 12rem;
         font-weight: bold;
@@ -70,7 +72,7 @@
         color: #fff;
     }
 
-    @keyframes crystal-animation {
+    @keyframes gun-animation {
         0% {
             transform: translate(0);
         }
@@ -123,11 +125,11 @@
     width: 100%;
 }
 
-.savannah_crystal {
+.savannah_gun {
     position: absolute;
     width: 25vw;
     height: 25vh;
-    animation: crystal-animation 2s linear infinite;
+    animation: gun-animation 2s linear infinite;
     bottom: 10vh;
     left: 60%;
 }
@@ -143,9 +145,9 @@
 
 .savannah_grass {
     position: absolute;
-    width: 98vw;
+    width: 100%;
     height: 50vh;
-    bottom: 0;
+    bottom: -3vh;
     left: 0;
     z-index: 200;
 }
