--- a/client/src/pages/RegistrationPage/registration.scss
+++ b/client/src/pages/RegistrationPage/registration.scss
@@ -38,6 +38,11 @@
   height: 5% !important;
 }
 
-.card-content {
-  padding-bottom: 0% !important;
+.reg_card{
+  .card-content {
+    .card-title{
+      padding-bottom: 0;
+      margin-bottom: 0;
+    }
+  }
 }
