--- a/client/src/pages/MainPage/popup.scss
+++ b/client/src/pages/MainPage/popup.scss
@@ -39,7 +39,7 @@
     margin-bottom: 0.5%;
 }
 
-.text_container {
+.popup_text_container {
     width: 50%;
     display: flex;
     align-items: center;
@@ -47,7 +47,7 @@
 }
 
 .image_container {
-    width: 50%;
+    width: 50% !important;
     display: flex;
     align-items: center;
     justify-content: center;
