--- a/client/src/pages/PromoPage/promo.scss
+++ b/client/src/pages/PromoPage/promo.scss
@@ -29,6 +29,9 @@
 .youtube_video_container {
     margin-top: 4%;
     margin-bottom: 4%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .youtube_video {
@@ -73,16 +76,6 @@
 .caption_promo {
     font-size: 42px;
     text-align: center;
-}
-
-@media (max-width: 860px) and (min-width: 500px) {
-    .promo_first_block {
-        flex-direction:column-reverse;
-        margin-bottom: 5%;
-    }
-    .info_promo {
-        width: 90%;
-    }
 }
 
 .info_block_promo {
@@ -164,4 +157,27 @@
     font-size: 22px;
     text-decoration: line-through;
     opacity: 0.4;
+}
+
+@media (max-width: 860px) and (min-width: 480px) {
+    .promo_first_block {
+        flex-direction:column-reverse;
+        margin-bottom: 5%;
+    }
+    .info_promo {
+        width: 90%;
+    }
+    .info_block_promo {
+        width: 80%;
+    }
+    .title_text {
+        font-size: 20px;
+    }
+    .sign_in_btn {
+        width: 45%;
+    }
+    iframe {
+        width: 440px !important;
+        height: 255px !important;
+    }
 }
