--- a/client/src/pages/GamesPage/AudioCall/audiocall.scss
+++ b/client/src/pages/GamesPage/AudioCall/audiocall.scss
@@ -1,62 +1,71 @@
-.audiocall-card {
-    font-size: 2rem;
-    color: #fff;
-    cursor: pointer;
-    text-transform: lowercase;
-}
-
-.selection-audio-container {
+.audiocall-container {
     display: flex;
     justify-content: space-around;
-    margin-top: 20vh;
-    margin-bottom: 5vh;
-    width: 70vw;
-}
-
-.selection-audio-container-end {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 3vh;
-    margin-bottom: 3vh;
-    width: 70vw;
-    flex-wrap: wrap;
-}
-
-.text_container {
-    width: 80vw;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-bottom: 2vh;
-    padding-bottom: 1vh;
-    border-bottom: solid #fff;
-}
-
-.play {
-    border-radius: 100%;
-    text-align: center;
-}
-
-.word_text {
-    font-size: 22px;
-    text-align: left;
-}
-
-.correct_word_image {
-    width: 40vh;
-    border-radius: 20%;
-    margin: 0 auto;
-}
-
-.additional__info {
-    display: flex;
+    align-items: center;
     flex-direction: column;
-    align-items: left;
-    justify-content: space-around;
-}
+    width: 100%;
+    min-height: 84.3vh;
 
-@media (max-width: 600px) {
     .audiocall-card {
-      font-size: 1.5rem;
-  }
-  }
+        font-size: 2rem;
+        color: #fff;
+        cursor: pointer;
+        text-transform: lowercase;
+    }
+
+    .selection-audio-container {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 20vh;
+        margin-bottom: 5vh;
+        width: 70vw;
+    }
+
+    .selection-audio-container-end {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 3vh;
+        margin-bottom: 3vh;
+        width: 70vw;
+        flex-wrap: wrap;
+    }
+
+    .text_container {
+        width: 80vw;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-bottom: 2vh;
+        padding-bottom: 1vh;
+        border-bottom: solid #fff;
+    }
+
+    .play {
+        border-radius: 100%;
+        text-align: center;
+    }
+
+    .word_text {
+        font-size: 22px;
+        text-align: left;
+    }
+
+    .correct_word_image {
+        width: 40vh;
+        border-radius: 20%;
+        margin: 0 auto;
+    }
+
+    .additional__info {
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        justify-content: space-around;
+    }
+
+    @media (max-width: 600px) {
+        .audiocall-card {
+            font-size: 1.5rem;
+        }
+    }
+}
