--- a/client/src/pages/GamesPage/Savannah/Savannah.scss
+++ b/client/src/pages/GamesPage/Savannah/Savannah.scss
@@ -5,7 +5,6 @@
     flex-direction: column;
     width: 100%;
     min-height: 84.3vh;
-    transform-style: preserve-3d;
 
     .savannah-field {
         background-image: url('../../../assets/images/savanna_bg.jpg');
@@ -38,14 +37,17 @@
         text-transform: lowercase;
     }
 
+    .animal_cage {
+        position: relative;
+        width: 30vw;
+        height: 30vh;
+    }
+
     .savannah-card_active {
         font-size: 2rem;
         color: #fff;
         display: flex;
         flex-direction: column;
-        position: absolute;
-        top: 5%;
-        left: 30%;
         font-size: 12rem;
         font-weight: bold;
         text-transform: capitalize;
@@ -123,6 +125,7 @@
 .gun-container {
     position: relative;
     width: 100%;
+    height: 10vh;
 }
 
 .savannah_gun {
