styles: minor russian language response fixes

--- a/client/src/pages/RegistrationPage/registration.scss
+++ b/client/src/pages/RegistrationPage/registration.scss
@@ -46,3 +46,11 @@
     }
   }
 }
+.card-input {
+  width: 100%;
+}
+@media (max-width : 680px) {
+  .card-title {
+    font-size: 20px !important;
+  }
+}
