--- a/client/src/pages/PromoPage/promo.scss
+++ b/client/src/pages/PromoPage/promo.scss
@@ -42,8 +42,10 @@
 
 .sign_in_btn {
     margin-right: 4%;
-    width: 28.9%;
+    width: 128px;
     border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 0 8px;
 }
 
 .btn_container {
@@ -51,6 +53,7 @@
     display: flex;
     justify-content: space-around;
     margin-top: 3%;
+    flex-wrap: wrap;
 }
 
 .head_promo_img {
@@ -75,13 +78,17 @@
     text-align: center;
 }
 
-@media (max-width: 860px) and (min-width: 500px) {
+@media (max-width: 860px) {
     .promo_first_block {
         flex-direction:column-reverse;
         margin-bottom: 5%;
     }
     .info_promo {
         width: 90%;
+    }
+
+    .sign_in_btn {
+        margin-bottom: 10px;
     }
 }
 
