fix: translate win and lost screens

--- a/client/src/pages/GamesPage/AudioCall/audiocall.scss
+++ b/client/src/pages/GamesPage/AudioCall/audiocall.scss
@@ -63,6 +63,16 @@
         justify-content: space-around;
     }
 
+    .end-screen {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 4rem;
+        min-height: 60vh;
+        color: #fff;
+    }
+
     @media (max-width: 600px) {
         .audiocall-card {
             font-size: 1.5rem;
@@ -73,6 +83,6 @@
 
 .full_screen_btn {
     margin-top: 1vh;
-    margin-left: 60vw;
+    margin-left: 5vw;
     margin-bottom: 1vh;
 }
