--- a/client/src/pages/StatisticPage/statistic.scss
+++ b/client/src/pages/StatisticPage/statistic.scss
@@ -15,6 +15,13 @@
     justify-content: space-around;
     margin: 4% 0;
     width: 100%;
+    flex-wrap: wrap;
+}
+
+.stat_part {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .game_stat_img {
@@ -26,6 +33,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    margin: 3%;
 }
 
 p {
